--- a/Japanese/四字熟語.md
+++ b/Japanese/四字熟語.md
@@ -1,25 +1,25 @@
 # 四字熟語
 
-## 深謀遠慮(しんぼう-えんりょ)  
+## 深謀遠慮 (しんぼう-えんりょ)  
 
 深く考えを巡らし、のちのちの遠い先のことまで見通した周到綿密な計画を立てること。  
 
-## 神算鬼謀(しんさん-きぼう)  
+## 神算鬼謀 (しんさん-きぼう)  
 
 人知の及ばないような、すぐれた巧みな策略のこと。  
 
-## 色即是空(しき-そくぜ-くう)  
+## 色即是空 (しき-そくぜ-くう)  
 
 現世に存在するあらゆる事物や現象はすべて実体ではなく、空無であるということ。  
 ▽仏教語。「色」はこの世のすべての事物や現象。「空」は固定的な実体がなく空無であること。  
 
-## 乾坤一擲(けんこんいってき)  
+## 乾坤一擲 (けんこんいってき)  
 
 運を天に任せ、一世一代の大勝負に出ることのたとえ。  
 All or nothing.（すべてか無か）  
 The die is cast.（賽は既に投げられた）  
 
-## 鎧袖一触(がいしゅういっしょく)
+## 鎧袖一触 (がいしゅういっしょく)
 
 鎧の袖でちょっと触れたぐらいの簡単さで敵を負かすこと。  
 相手を容易く打ち負かしてしまうたとえ。  
@@ -30,3 +30,8 @@ The die is cast.（賽は既に投げられた）
 例文 :  
 「世界ランク1位の選手は、鎧袖一触の強さであった」  
 「あの大企業は今年度も鎧袖一触の状況である」  
+
+## 曖昧模糊 (あいまい-もこ)
+
+はっきりせず、ぼんやりしているさま。あやふやなさま。  
+▽「曖昧」も「模糊」も、ともにぼんやりして不明瞭ふめいりょうなさま。「模」は「糢」とも書く。  
