--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -357,13 +357,6 @@ x86Extension
 
 ---
 
-## TOP 句 PERCENT
-
-[SqlServerの SELECT TOP 100 PERCENT で作成したビューの並び順は『保証されない』](https://culage.hatenablog.com/entry/20170824/p1)  
-[TOP 句 PERCENT](https://haradago.hatenadiary.org/entry/20180214/p1)  
-
----
-
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -415,3 +408,39 @@ Issueってなんすかね。
 [C#でDIコンテナを使用してみる](https://remix-yh.net/1332/)
 
 ・ASP.Net Core API + Vue axios 通信サンプル
+
+
+
+-- TOP 100 PERCENTってやる意味あるのか？
+やるとしてなんでやるの？
+これをやるとORDER BYが効かなくなってしまうみたい。
+昔はあるテクニックが有効であったために使われたみたいだが、今はほぼ意味がないらしい。
+まぁ、そういうのがあったくらいかなぁ。
+
+
+
+MVPはMVCの次。MVVMの前。
+昨日やった感じ、インターフェースでプロパティを定義して、定義したプロパティとコントロールを対応させて、各種イベントが発火したらガチャガチャするって感じだった。
+プロパティ増えたらインターフェース増やさないといけない。
+そのインターフェースがビューだけが実装しているならそれでいいのかもしれない。
+面白いと思ったけど、まだちょっと野暮ったい感じがした。
+色ツールくらいだったらちょうどいいかなと思うので、あっちをリファクタするときにMVPに変換して遊んでみるか。
+
+色ツールをMVVMで作るってなったらちょっとやりすぎだよなぁ。
+コードビハインドで書いた時に感じたのは、コントロールへの値の代入が同じこと書きすぎて無駄に感じることだ。
+確かにあれならプロパティ定義して、それと結びつけるだけでいいだろうとは思う。
+
+
+
+たくさん寝たのに気分は最悪だ。
+すんげー仕事に身が入らない。
+まーじで海いきたくない。
+
+
+
+vueのデッドロックの資料をまとめ忘れたので、今日みたいな肝心な時に約に立たない。
+まとめている意味がない。
+てか福田さんおれのtilの存在知ってるんだな。それもいやだ。
+技術あっても、電話に出ないとかサポートの質問に答えないとか、いる意味ないよな。
+
+
