mvp,json,linqまとめ

--- a/BasicInformation/午前/1.テクノロジ系/11.セキュリティ.md
+++ b/BasicInformation/午前/1.テクノロジ系/11.セキュリティ.md
@@ -1372,6 +1372,11 @@ BIOSに代わる新仕様であるUEFI(Unified Extensible Firmware Interface)で
 
 DMZに移すのは「情報ネットワークとの通信が必要なもの」です。選択肢のうち「エ」のパッチ管理サーバは、アップデートソフトウェアを情報ネットワークから入手するとありますから、これがDMZに移す機器であると判断できます。  
 
+### サニタイジング (sanitizing)
+
+消毒。無害化。エスケープ処理のこと。  
+プログラムにとって特別な意味を持つ可能性のある文字や文字列を検知して、別の表記に置き換える。  
+
 ---
 
 ## セキュリティ実装技術
