--- a/Other/業務用語など.md
+++ b/Other/業務用語など.md
@@ -1,4 +1,4 @@
-# お金関係の色々
+# 業務用語まとめ
 
 ## 借金の利率
 
@@ -90,8 +90,6 @@
 そのまま本体価格を税込み価格から引けば内税を算出できる。  
 
 消費税を直で求める場合は、110%の内の10%を求めたいので、10/110をあげればよい。というわけだろうかね。  
-
-## 調整額
 
 ---
 
@@ -233,39 +231,7 @@ ECOの収入原簿印刷のアレ。
 
 ---
 
-## 従食(じゅうしょく)とは？まかないとは？
-
-[ファミレス各社の従食（まかない）どこが豪華で美味しい？](https://tenshoku-restaurants.com/blog/272)  
-
-従食(じゅうしょく)とは「従業員食事割引制度・食事補助」といった従業員の食事に対して会社側がいくらか負担するものです。  
-簡単にいうと「お客様に提供してる料理を安く食べることができる」制度です。  
-一方「まかない」は、一般的にお店から「無料で従業員に提供される食事」とされています。  
-
-→  
-従食は「有料」  
-まかないは「無料」  
-
----
-
-## レベニューマネジメント
-
-[レベニューマネジメントとは？概要や実施手順、活用事例を紹介](https://www.onemarketing.jp/knowledge/word/revenue-management)  
-
-顧客の需要に応じて商品やサービスの料金を変動させるマネジメント手法。  
-「全ての商品を売り切ることが収益の最大化につながる」という考え方に基づき、余りそうな部分を割安の料金設定で売り切る。  
-商品の売り切りが最重要事項。  
-
-ホテル業界や航空業界など、在庫を繰越せない産業で活用される。  
-商品やサービスが売れ残ると全損となるため、少しでも多く売り切るために採用されている。  
-
-### オーバーブック
-
-提供できる商品の数以上に、予約を受け付けること。  
-レベニューマネジメントにおける弊害の1つ。  
-
----
-
-## ファイナンス？会計？簿記？
+## ファイナンス
 
 ファイナンスは会社が事業のために資金を調達・運用すること。  
 目的は企業価値を向上させること。  
@@ -299,7 +265,92 @@ ECOの収入原簿印刷のアレ。
 
 ---
 
-## 退職・就職の際にもらえるお金一覧
+## デシャップ
 
-![!](https://pbs.twimg.com/media/FJlKSv6aUAE3pe8?format=jpg&name=900x900)  
-<https://twitter.com/namazu9p/status/1484299243099930624?t=iIS9nRMNQ0R7Vxu0HzGhmA&s=09>  
+デシャップとは、レストランなどの飲食店で厨房で出来上がった料理が配膳の前に置かれる場所のことをいいます。  
+「dish up（ディッシュアップ）」という言葉が語源になっており、飲食業界の専門用語として用いられています。  
+また、完成した料理をホールなどに運ぶ仕事をする人のことを指す場合もあります。  
+
+---
+
+## 従食(じゅうしょく)とは？まかないとは？
+
+[ファミレス各社の従食（まかない）どこが豪華で美味しい？](https://tenshoku-restaurants.com/blog/272)  
+
+従食(じゅうしょく)とは「従業員食事割引制度・食事補助」といった従業員の食事に対して会社側がいくらか負担するものです。  
+簡単にいうと「お客様に提供してる料理を安く食べることができる」制度です。  
+一方「まかない」は、一般的にお店から「無料で従業員に提供される食事」とされています。  
+
+→  
+従食は「有料」  
+まかないは「無料」  
+
+---
+
+## レベニューマネジメント
+
+[レベニューマネジメントとは？概要や実施手順、活用事例を紹介](https://www.onemarketing.jp/knowledge/word/revenue-management)  
+
+顧客の需要に応じて商品やサービスの料金を変動させるマネジメント手法。  
+「全ての商品を売り切ることが収益の最大化につながる」という考え方に基づき、余りそうな部分を割安の料金設定で売り切る。  
+商品の売り切りが最重要事項。  
+
+ホテル業界や航空業界など、在庫を繰越せない産業で活用される。  
+商品やサービスが売れ残ると全損となるため、少しでも多く売り切るために採用されている。  
+
+### オーバーブック
+
+提供できる商品の数以上に、予約を受け付けること。  
+レベニューマネジメントにおける弊害の1つ。  
+
+---
+
+## OES (Order Entry System)
+
+オーダー・エントリー・システム  
+オーダーをとったその場でハンディターミナルにメニュー品目と数量を入力すると、それらが厨房に置いたプリンターから打ち出されてオーダーが通る仕組み。  
+
+---
+
+## EOS (Electronic Ordering System)
+
+[OBC360°EOS](https://www.obc.co.jp/360/list/term/term24)  
+
+``` txt : OBC360
+ネットワークを利用して発注をする電子受発注システムのこと。  
+```
+
+[it-trend EOSとEDIの違いとは？](https://it-trend.jp/receiving_orders/article/374-0004)  
+
+``` txt : it-trend
+発注業務において使用される、仕入れもとに対してオンラインで発注情報を伝達するシステム。
+従来は紙の伝票を用いて行っていた発注業務を、PCで再現できるようにしたもの。
+```
+
+EDIやBMSと関係が深い。
+
+---
+
+## EDI(Electronic Data Interchange)
+
+企業間電子データ交換。  
+基本情報でやったあれ。  
+受発注業務以外のデータもやり取りする。(発注書、納品書、請求書など)  
+なのでEDIはEOSを含む。EOSはEDIの一部であると言える。  
+
+---
+
+## BMS(Business Message Standards)
+
+EDIの標準仕様。  
+多分だけど、交換するメッセージの仕様に関して基本情報でやったでしょ。  
+あれのことを言ってるんじゃないかな。  
+まぁ、データ交換の仕様なんだから、EDIで企業間でデータやり取りするなら、この仕様に基づいて作ろうねっていう仕様なのだろう。  
+つまり仕様ってことだ。  
+
+---
+
+## CTI (Computer Telephony Integration)
+
+「コンピューター電話統合」とも呼ばれる。コンピューターと電話機、PBX（構内交換機）、FAX、モデムなどの電話系装置を統合し、コールセンターやサポートセンターの情報機能を効率化するシステム。  
+「CTI」ではオペレーターが電話の発着信や通話を、ヘッドセット（マイク一体型ヘッドホン）の接続されたコンピューターで行うことができる。  
