--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,14 +1,5 @@
 # 後でまとめたいやつら
 
-## ウェビナー
-
-・ウェブとセミナーを組み合わせた造語。  
-・ウェブセミナー、オンラインセミナーとも言う。  
-・インターネット上で行うセミナーそのもの、もしくはそのためのツールの名称。  
-・数十~数百人規模の対話型セミナーを主用途とする。  
-・参加者との対話が可能な点が今までのネット上のセミナーと大きく違うのが特徴とか何とか。  
-・Zoomなんかが主たるサービスになる。(他 Microsoft Terms等)  
-
 ---
 
 ## プラグアンドプレイ(Plug and Play, PnP)
@@ -253,34 +244,11 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
-##
-
-<https://twitter.com/franc_life_/status/1496233334573346822?t=WleD8oKm4hL6tJHyWvFJ5g&s=09>
-
-①「月給」と「月収」
-②「年収」と「年俸」
-③「基本給」と「手取り」
-④「所得税」と「住民税」
-⑤「社会保険料」と「雇用保険料」
-⑥「法定内残業」と「法定外残業」
-
-給与明細の見方は、社会人の基本。
-1つでも説明できない方は、僕と一緒に勉強しましょうか
-
----
-
-## デシャップ
-
-デシャップとは、レストランなどの飲食店で厨房で出来上がった料理が配膳の前に置かれる場所のことをいいます。  
-「dish up（ディッシュアップ）」という言葉が語源になっており、飲食業界の専門用語として用いられています。  
-また、完成した料理をホールなどに運ぶ仕事をする人のことを指す場合もあります。  
-
----
-
 ## WebAssembly
 
 [WebAssemblyとは？〜実際にC言語をブラウザで動かす〜【2019年6月版】](https://qiita.com/umamichi/items/c62d18b7ed81fdba63c2)  
 [日経_XTECH_3分でわかる WebAssembly](https://active.nikkeibp.co.jp/atcl/act/19/00146/032000001/)  
+[Rustでわかる！ WebAssemblyのメリット～処理速度の違いを、サンプルを作りながら体験しよう](https://codezine.jp/article/detail/15920)  
 
 WebAssemblyはWebブラウザーが実行できるバイナリー形式のアセンブリー言語。  
 CやC++といった各種プログラミング言語で開発したプログラムをコンパイルして、ブラウザー上で実行できる。  
@@ -383,7 +351,7 @@ SSH トンネル
 
 ---
 
-## マニフェストファイルとは？
+## マニフェストファイル
 
 アプリケーション マニフェスト [application manifest]  
 アプリケーションおよびそのすべての構成ファイルを記述するファイル。ClickOnce アプリケーションによって使用されます。  
@@ -402,23 +370,10 @@ SSH トンネル
 
 ## 雑記
 
-トーレス・デル・パイネ国立公園
-avalon peninsula canada
-
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
 
 [【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
 [【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
-
-<https://twitter.com/Sheeeeepla/status/1512642396416528387>
-Windowsをインストールしたらやること
-☑Sysinternalsを入れて不要な・サービス・スタートアップを探して止める
-☑NoMeiryoUIでシステムフォントをIBM Plex Sans JPに変更
-☑AutoHotKeyでIME変換キーをAlt単押しで切替可に
-☑OneDriveの無効化
-☑Remove-AppxPackage
-☑PowerShell Coreをインストール
-
 [.NET 6とVSCodeでデスクトップアプリ（ランチャー）](https://qiita.com/Kosen-amai/items/61e6b03b8e0fccc35ee5)
 [分岐アンチパターン](https://qiita.com/pakkun/items/9bef9132f168ba0befd7)  
 
@@ -451,54 +406,9 @@ Issueってなんすかね。
 [C#でDIコンテナを使用してみる](https://remix-yh.net/1332/)
 
 ・ASP.Net Core API + Vue axios 通信サンプル
-・MVPまとめ
-・標準入力を複数立ち上げたい。
-・puttyトンネリング設定まとめ
 ・帳票印刷　プログラミング
 
 
 
 
 
-
-
-たくさん寝たのに気分は最悪だ。
-すんげー仕事に身が入らない。
-まーじで海いきたくない。
-
-
-
-vueのデッドロックの資料をまとめ忘れたので、今日みたいな肝心な時に約に立たない。
-まとめている意味がない。
-てか福田さんおれのtilの存在知ってるんだな。それもいやだ。
-技術あっても、電話に出ないとかサポートの質問に答えないとか、いる意味ないよな。
-
-
-
-エアリズムマスク欲しい。
-黒色のマスクは威圧感的に駄目だと気が付いたので、ネイビーのマスクにしたい。
-Lサイズかな。
-
-後は100円クーポンを消化すること。
-ガムでも買っておこう。
-ごみ袋でもいいかな。
-
-
-
-8時に遅れる夢を見た。
-これが夢だったらどんなにいいでしょうって思うほどに夢だと気が付かなかった。
-夢だったらと思って脱出しようと思っても、どうやったら脱出できるのかわからんかあった。
-
-
-昨日はマジでクソだったな。
-おかげで今日もクソだ。
-強引すぎるんだよな。
-
-4時間しか眠れなかったが、激しい眠気はない。
-明らかに体調が悪いのは変わらないけど。  
-
-
-最近花粉症が軽くなって来た気がする。
-ピークの時は本当にひどかったな。
-
-やっぱりWeb系面白いなぁ。
