baseon,top 100 percent

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -408,3 +408,35 @@ Issueってなんすかね。
 ・ASP.Net Core API + Vue axios 通信サンプル
 ・帳票印刷　プログラミング
 ・Vueの最低限の実装とそこまでのまとめ
+・最低限帳票を出力するだけのサンプルとか
+<https://www.amazon.co.jp/%E3%81%A7%E5%B8%B3%E7%A5%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E5%8D%B0%E5%88%B7%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E3%82%8B%E6%96%B9%E6%B3%95-%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%AD%E3%82%BD%E3%83%95%E3%83%88%E3%81%AE%E7%84%A1%E6%96%99%E5%B8%B3%E7%A5%A8%E3%83%84%E3%83%BC%E3%83%AB%E3%80%8CMicrosoft-Report-Designer%E3%80%8D%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%EF%BC%8C-%E4%B8%80%E8%A6%A7%E3%82%84%E3%82%B0%E3%83%A9%E3%83%95%E8%A1%A8%E7%A4%BA%E3%81%AE%E3%81%A7%E3%81%8D%E3%82%8B%E5%B8%B3%E7%A5%A8%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E6%88%90%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95%E3%82%92%E8%A7%A3%E8%AA%AC%E3%81%97%E3%81%A6%E3%81%84%E3%81%BE%E3%81%99-ebook/dp/B096SLNLW6>
+<https://www.exceedsystem.net/2020/09/04/how-to-easily-print-a-report-using-the-winforms/>
+ActiveReportを使わなくても帳票を出力する仕組みは存在する模様。  
+本まであった。
+時間があるときに見てみたい。
+
+
+ただgitpullするとそのブランチに置ける最新を取得してくれる模様。
+割と始めて知った。
+
+
+
+・靴を手入れした
+・ネオモバで株の購入をした
+・検便した
+・夜に高配当株も買う
+・定期便整理する
+・そろそろ髪を切りたい
+→外でできるうちは外で切ってしまえばいいのでは。
+・今日もくそ眠かった。
+
+
+・今日はSytleをやる
+・InterfaceにInterfaceを実装することってできるんですかね。
+
+・またブリングアップサリーでカールのコンボで行くか
+
+
+・要件定義も仕様もまとめないで実装に入る。理由は速度優先。
+・過去の成果物があるから見ながらやればいいだろうという発想だが、元のやつもそれなりに仕様がガバガバでバグもある。
+・もちろんそのまま移植するのでバグも移植する。
