style,baseon,interface

--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -298,3 +298,45 @@ abstractはprotectedが使える。
 
 要約すると、A、B、Cってプロセスが並行してて、  
 ある資源が全然解放されないって時にセマフォがタイムアウトエラーを発生させるってことらしい。  
+
+---
+
+## シャローコピーとディープコピー
+
+[シャローコピーとディープコピーの違い](https://itsakura.com/it-program-shallow)  
+[C# DeepCopyする方法](https://tomisenblog.com/c-sharp-deepcopy/)  
+
+シンボリックリンクとハードリンクみたいなやつ。  
+シャローコピーは明らかにシンボリックリンクだな。  
+いや、多分正確には違うと思うけど。  
+
+### シャローコピー
+
+・オブジェクトの参照先をコピーします。  
+・コピー元のオブジェクトとコピー先のオブジェクトが同じアドレスの値(インスタンス)を参照します。  
+・片方のオブジェクトの値を変更すると、もう一方のオブジェクトの値も変更されます。  
+・英語ではshallow copyです。shallowは、浅いという意味です。  
+
+変数だけ別の用意して、参照先は同じやつ。  
+
+``` C# : シャローコピー
+    var srcMember = new Member { Name = "鈴木", Address = "東京都" };
+    var dstMember = srcMember;
+    dstMember.Address = "千葉県";
+    // src側も変わってる
+```
+
+### ディープコピー
+
+・オブジェクトの値(インスタンス)をコピーします。  
+・コピー元のオブジェクトとコピー先のオブジェクトがそれぞれ別のアドレスの値(インスタンス)を参照します。  
+・片方のオブジェクトの値を変更しても、もう一方のオブジェクトの値は変更されません。  
+・英語ではdeep copyです。deepは、深いという意味です。  
+
+変数も別で参照先も別のやつ。  
+でも、どっちも入ってる値は同じ。  
+C#ではデフォルトでやってくれるやつはないので自分で実装する必要がある。  
+といっても、Newして片方のデータをそのまま新しいほうにグルグルセットするだけだけどね。  
+シリアライズとデシリアライズでやる方法もあるか。  
+
+ソースはシャローコピーのdst側を千葉県ってやってもsrcの値はそのままになるだけだから省略するよ。  
