・ThreadSleepはなぜダメなのか ・相対パス ・カレントパス ・リソースディクショナリー

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -422,3 +422,42 @@ async await 同期 同じ　c#
 - async void を避ける  
 - すべて非同期にする  
 - コンテキストを構成する  
+
+---
+
+## なぜThread.Sleepはだめなのか
+
+[C# で Thread.Sleep はあきまへん](https://qiita.com/TsuyoshiUshio@github/items/e9404651c9e48f1b8443)  
+
+理由は簡単で、Thread.Sleep Method は、スレッドを止めるメソッドだから、スレッドがブロックされます。  
+だから、この非同期処理が、メインと同じスレッドを使っているとしたら、メイン側のスレッドも停止します。  
+
+``` C#
+// Thread.Sleepの場合 | Task.Delayの場合
+// step 1             | step 1
+// getMessage!        | getMessage!
+// finished!          | step 3
+// message:hello      | finished!
+// step 2             | message:hello
+// step 3             | step 2
+{
+    executeAsync();
+    Console.WriteLine("step 3");
+    Console.ReadLine();
+}
+static async Task<string> getMessageAsync(string message)
+{
+    Console.WriteLine("getMessage!");
+    //System.Threading.Thread.Sleep(3000);
+    await Task.Delay(3000);
+    Console.WriteLine("finished!");
+    return "message:" + message;
+}
+static async void executeAsync()
+{
+    Console.WriteLine("step 1");
+    var result = await getMessageAsync("hello");
+    Console.WriteLine(result);
+    Console.WriteLine("step 2");
+}
+```
