データベース関係追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -368,6 +368,56 @@ SSH トンネル
 
 ---
 
+## 帳票印刷　プログラミング
+
+ActiveReportを使わなくても帳票を出力する仕組みは存在する模様。  
+本まであった。
+時間があるときに見てみたい。
+
+Microsoft RDLC Report Designer  
+
+[ピーコックアンダーソンの本](https://www.amazon.co.jp/%E3%81%A7%E5%B8%B3%E7%A5%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E5%8D%B0%E5%88%B7%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E3%82%8B%E6%96%B9%E6%B3%95-%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%AD%E3%82%BD%E3%83%95%E3%83%88%E3%81%AE%E7%84%A1%E6%96%99%E5%B8%B3%E7%A5%A8%E3%83%84%E3%83%BC%E3%83%AB%E3%80%8CMicrosoft-Report-Designer%E3%80%8D%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%EF%BC%8C-%E4%B8%80%E8%A6%A7%E3%82%84%E3%82%B0%E3%83%A9%E3%83%95%E8%A1%A8%E7%A4%BA%E3%81%AE%E3%81%A7%E3%81%8D%E3%82%8B%E5%B8%B3%E7%A5%A8%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E6%88%90%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95%E3%82%92%E8%A7%A3%E8%AA%AC%E3%81%97%E3%81%A6%E3%81%84%E3%81%BE%E3%81%99-ebook/dp/B096SLNLW6)  
+[WinFormsでライブラリを利用せずにお手軽に帳票出力する方法](https://www.exceedsystem.net/2020/09/04/how-to-easily-print-a-report-using-the-winforms/)  
+
+---
+
+## デッドロックを発生させるサンプル
+
+[Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
+
+``` C#
+{
+    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+    {
+        // 接続先の SQL Server インスタンス
+        DataSource = "SQLSV2016",
+        // 接続ユーザー名
+        UserID = "sa",
+        // 接続パスワード
+        Password = "Fx67kAP",
+        // 接続するデータベース
+        InitialCatalog = "itou_test_HKG",
+        // 接続タイムアウトの秒数(ms) デフォルトは 15 秒
+        ConnectTimeout = 60000
+    };
+    using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+    // データベース接続
+    connection.Open();
+    // クエリ生成
+    StringBuilder query = new StringBuilder()
+        .AppendLine("SELECT * FROM [TRe_Reservation];");
+    // SQLコマンド生成
+    using SqlCommand command = new SqlCommand(query.ToString(), connection);
+    // SQL実行
+    using SqlDataReader reader = command.ExecuteReader();
+    // 結果表示
+    while (reader.Read())
+        Console.WriteLine($"{reader.GetString(1)},{reader.GetInt32(2)}");
+}
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -403,18 +453,23 @@ Issueってなんすかね。
 
 [イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
 
-[C#でDIコンテナを使用してみる](https://remix-yh.net/1332/)
-
 ・ASP.Net Core API + Vue axios 通信サンプル
-・帳票印刷　プログラミング
 ・Vueの最低限の実装とそこまでのまとめ
 ・最低限帳票を出力するだけのサンプルとか
-<https://www.amazon.co.jp/%E3%81%A7%E5%B8%B3%E7%A5%A8%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E5%8D%B0%E5%88%B7%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E3%82%8B%E6%96%B9%E6%B3%95-%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%AD%E3%82%BD%E3%83%95%E3%83%88%E3%81%AE%E7%84%A1%E6%96%99%E5%B8%B3%E7%A5%A8%E3%83%84%E3%83%BC%E3%83%AB%E3%80%8CMicrosoft-Report-Designer%E3%80%8D%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%EF%BC%8C-%E4%B8%80%E8%A6%A7%E3%82%84%E3%82%B0%E3%83%A9%E3%83%95%E8%A1%A8%E7%A4%BA%E3%81%AE%E3%81%A7%E3%81%8D%E3%82%8B%E5%B8%B3%E7%A5%A8%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%82%92%E4%BD%9C%E6%88%90%E3%81%99%E3%82%8B%E6%96%B9%E6%B3%95%E3%82%92%E8%A7%A3%E8%AA%AC%E3%81%97%E3%81%A6%E3%81%84%E3%81%BE%E3%81%99-ebook/dp/B096SLNLW6>
-<https://www.exceedsystem.net/2020/09/04/how-to-easily-print-a-report-using-the-winforms/>
-ActiveReportを使わなくても帳票を出力する仕組みは存在する模様。  
-本まであった。
-時間があるときに見てみたい。
 
 
-ただgitpullするとそのブランチに置ける最新を取得してくれる模様。
-割と始めて知った。
+
+
+・8時前に自然に起床。朝から勉強も買い物もできて気分も体調もよい。控えめに言って最高。
+・朝からめっちゃ腹が減る。バナナだけでは足りなかったので、会社についてカロリーメイトを食べた。
+・今日は寒い。
+
+
+
+成果物はあるにはあるけど、それに対する仕様書はないのでコードを読み解くわけだが、スパゲッティなので、読み解くのが大変。
+読み間違えも普通に発生するので、足りない機能やバグも普通に発生する。
+それでいて遅い遅い、なんでできてないんだって言われる。
+
+転職しなかったのは、そんな中でも毎回技術的な新しい発見があったので、こんなこともわからないようじゃそもそも転職できないだろうし、できたとしてもやっていけないだろうと思っていたから。
+後は、技術が分かること自体は楽しかったので、それで釣り合いが取れていた。
+が、さすがにそうも行っていられないくらいプロジェクトが立ち行かなくなり、人もやめて更に余裕がなくなり、もうだめだなって思ったので活動を始めた。
