デッドロック

--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -307,6 +307,190 @@ private void Execute()
 
 ---
 
+## お手軽実務テーブル接続
+
+``` C#
+{
+    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+    {
+        // 接続先の SQL Server インスタンス
+        DataSource = "SQLSV2016",
+        // 接続ユーザー名
+        UserID = "sa",
+        // 接続パスワード
+        Password = "Fx67kAP",
+        // 接続するデータベース
+        InitialCatalog = "itou_test_HKG",
+        // 接続タイムアウトの秒数(ms) デフォルトは 15 秒
+        ConnectTimeout = 60000
+    };
+    using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+    // データベース接続
+    connection.Open();
+    // クエリ生成
+    StringBuilder query = new StringBuilder()
+        .AppendLine("SELECT * FROM [TRe_Reservation];");
+    // SQLコマンド生成
+    using SqlCommand command = new SqlCommand(query.ToString(), connection);
+    // SQL実行
+    using SqlDataReader reader = command.ExecuteReader();
+    // 結果表示
+    while (reader.Read())
+        Console.WriteLine($"{reader["ReservationNo"]}");
+}
+```
+
+---
+
+## 意図的にデッドロックを発生させるサンプル
+
+[Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
+[デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -][https://ryuchan.hatenablog.com/entry/2016/10/16/173225]  
+
+``` C#
+private void DeadLock(){
+    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+    {
+        // 接続先の SQL Server インスタンス
+        DataSource = "SQLSV2016",
+        // 接続ユーザー名
+        UserID = "sa",
+        // 接続パスワード
+        Password = "Fx67kAP",
+        // 接続するデータベース
+        InitialCatalog = "itou_test_HKG",
+        // 接続タイムアウトの秒数(ms) デフォルトは 15 秒
+        ConnectTimeout = 60000
+    };
+    using SqlConnection connection = new SqlConnection(builder.ConnectionString);
+    // データベース接続
+    connection.Open();
+
+
+    CreateTable();
+    Insert();
+    UpdateTask1();
+    UpdateTask2();
+
+
+    // テーブルの作成
+    void CreateTable()
+    {
+        Console.WriteLine("テーブルを作成");
+        StringBuilder query = new StringBuilder()
+            .AppendLine("DROP TABLE IF EXISTS [TEST_TBL1];")
+            .AppendLine("DROP TABLE IF EXISTS [TEST_TBL2];")
+            .AppendLine("CREATE TABLE [TEST_TBL1] ( ")
+            .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+            .AppendLine("    Name NVARCHAR(50) ")
+            .AppendLine("); ")
+            .AppendLine("CREATE TABLE [TEST_TBL2] ( ")
+            .AppendLine("    ID INT NOT NULL PRIMARY KEY, ")
+            .AppendLine("    Name NVARCHAR(50) ")
+            .AppendLine("); ");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            command.ExecuteNonQuery();
+            Console.WriteLine("テーブル作成完了");
+            Console.WriteLine();
+        }
+    }
+
+    // INSERT デモ
+    void Insert()
+    {
+        StringBuilder query = new StringBuilder()
+            .AppendLine("INSERT [TEST_TBL1] (ID, Name) ")
+            .AppendLine("VALUES")
+            .AppendLine("    (1,'test001'),")
+            .AppendLine("    (2,'test002');")
+            .AppendLine("INSERT [TEST_TBL2] (ID, Name) ")
+            .AppendLine("VALUES")
+            .AppendLine("    (1,'test001'),")
+            .AppendLine("    (2,'test002');");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            int rowsAffected = command.ExecuteNonQuery();
+            Console.WriteLine(rowsAffected + " 行 挿入されました。");
+            Console.WriteLine();
+        }
+    }
+    
+    void UpdateTask1()
+    {
+        StringBuilder query = new StringBuilder()
+            .AppendLine("BEGIN TRAN")
+            .AppendLine("UPDATE [TEST_TBL1]")
+            .AppendLine("SET [Name] = 'aaaaa'")
+            .AppendLine("WHERE ID = 2;")
+            .AppendLine("WAITFOR DELAY '00:00:05';")
+            .AppendLine("UPDATE [TEST_TBL2]")
+            .AppendLine("SET [Name] = 'bbbbb'")
+            .AppendLine("WHERE ID = 2;")
+            .AppendLine("COMMIT TRAN");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            int rowsAffected = command.ExecuteNonQuery();
+            Console.WriteLine(rowsAffected + " 行 更新されました。");
+            Console.WriteLine();
+        }
+    }
+
+    void UpdateTask2()
+    {
+        StringBuilder query = new StringBuilder()
+            .AppendLine("BEGIN TRAN")
+            .AppendLine("UPDATE [TEST_TBL1]")
+            .AppendLine("SET [Name] = 'ccccc'")
+            .AppendLine("WHERE ID = 2;")
+            .AppendLine("WAITFOR DELAY '00:00:03';")
+            .AppendLine("UPDATE [TEST_TBL2]")
+            .AppendLine("SET [Name] = 'ddddd'")
+            .AppendLine("WHERE ID = 2;")
+            .AppendLine("COMMIT TRAN");
+        using (SqlCommand command = new SqlCommand(query.ToString(), connection) { CommandTimeout = 60000 })
+        {
+            int rowsAffected = command.ExecuteNonQuery();
+            Console.WriteLine(rowsAffected + " 行 更新されました。");
+            Console.WriteLine();
+        }
+    }
+}
+```
+
+``` sql
+BEGIN TRAN
+
+UPDATE [TEST_TBL1]
+SET [Name] = 'aaaaa'
+WHERE ID = 2;
+
+WAITFOR DELAY '00:00:05';
+
+UPDATE [TEST_TBL2]
+SET [Name] = 'bbbbb'
+WHERE ID = 2;
+
+COMMIT TRAN
+
+
+BEGIN TRAN
+
+UPDATE [TEST_TBL2]
+SET [Name] = 'ccccc'
+WHERE ID = 2;
+
+WAITFOR DELAY '00:00:03';
+
+UPDATE [TEST_TBL1]
+SET [Name] = 'dddd'
+WHERE ID = 2;
+
+COMMIT TRAN
+```
+
+---
+
 ## 実務
 
 ``` C#
