--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -429,7 +429,8 @@ async await 同期 同じ　c#
 
 [C# で Thread.Sleep はあきまへん](https://qiita.com/TsuyoshiUshio@github/items/e9404651c9e48f1b8443)  
 
-理由は簡単で、Thread.Sleep Method は、スレッドを止めるメソッドだから、スレッドがブロックされます。  
+理由は簡単で、Thread.Sleep Method は、スレッドを止めるメソッドだから。  
+スレッドがブロックされ、事実上のフリーズ状態となる。  
 だから、この非同期処理が、メインと同じスレッドを使っているとしたら、メイン側のスレッドも停止します。  
 
 ``` C#
